contrib/kubernetes/nginx-declarative-api.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-dapi

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: nginx-dapi
  labels:
    app: redis
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis
        ports:
        - name: redis
          containerPort: 6379

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-dapi
  namespace: nginx-dapi
  labels:
    app: nginx-dapi
spec:
  selector:
    matchLabels:
      app: nginx-dapi
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx-dapi
    spec:
      containers:
      - name: nginx-dapi
        image: YOUR_REGISTRY_HERE/nginx-declarative-api:latest
        ports:
        - name: http
          containerPort: 5000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devportal
  namespace: nginx-dapi
  labels:
    app: devportal
spec:
  selector:
    matchLabels:
      app: devportal
  replicas: 1
  template:
    metadata:
      labels:
        app: devportal
    spec:
      containers:
      - name: devportal
        image: YOUR_REGISTRY_HERE/nginx-declarative-api-devportal:latest
        ports:
        - name: http
          containerPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: nginx-dapi
  labels:
    app: redis
spec:
  ports:
  - name: redis
    port: 6379
  selector:
    app: redis
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-dapi
  namespace: nginx-dapi
  labels:
    app: nginx-dapi
spec:
  ports:
  - name: http
    port: 5000
  selector:
    app: nginx-dapi
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: devportal
  namespace: nginx-dapi
  labels:
    app: devportal
spec:
  ports:
  - name: http
    port: 5000
  selector:
    app: devportal
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-dapi
  namespace: nginx-dapi
  labels:
    app: nginx-dapi
spec:
  ingressClassName: nginx
  rules:
    - host: nginx-dapi.k8s.f5.ff.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-dapi
                port:
                  number: 5000
